test/corpus/sections.txt
========
sections
========

{0 title}

{1 title}

{2 title}

{3 title}

{4 title}

{5 title}

---

(source_file
  (text)
  (header)
  (text)
  (header)
  (text)
  (header)
  (text)
  (header)
  (text)
  (header)
  (text)
  (header)
  (text))
